--- a/index.html
+++ b/index.html
@@ -74,12 +74,11 @@
 
         <div class="container-projetos">
             <div class="projeto ativo">
-                */colocar link do projeto/*
-                <a href="*" target="_blank">
-                    <img src="./src/imagens/" alt="Projeto landing page">
+                <a href="https://hen-ryu.github.io/site-hqs/" target="_blank">
+                    <img src="src/imagens/projeto-hqs.png" alt="Projeto landing page">
                     <h3>Projeto 1</h3>
                     <div class="informacoes-projeto">
-                        <p>projeto feito usando HTML, CSS e JavaScript</p>
+                        <p>projeto feito usando HTML, CSS e JavaScript, aonde eu montei uma página contendo a minha coleção de quadrinhos.</p>
                         <p>Ver no GitHub</p>
                     </div>
                 </a>
